# pytube-server

./: .gitignore  README.md  TODO.md  api.py  app.py  auth.py  cli.py  db.py  filters.py  requirements.txt  settings.py  setup.cfg  utils.py
ansible/: hosts  site.yml
ansible/group_vars/: all.yml
ansible/roles/common/handlers/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/common/templates/: gopro.service  herotube.service
docs/: gopro.service
herotube/: api.py  app.py  auth.py  cli.py  db.py  filters.py  settings.py
herotube/templates/: _layout.html  index.html  list.html  map.html  playlist.html  playlists.html  video.html
herotube/templates/partials/: videos.html  videos_list.html
static/: style.css
templates/: _layout.html  index.html  list.html  map.html  video.html
templates/partials/: video.html  videos.html  videos_list.html
