[metadata]
name = herotube
version = 0.1.0
description = Web server and tools for (GoPro) videos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abulte/herotube
keywords = video gopro hero
license = MIT
author = abulte
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
install_requires =
    Flask
    jinja-partials
    minicli
    ffpb
    gunicorn
    ffmpeg-python
    humanize
    more-itertools
    gpmf@git+https://github.com/abulte/pygpmf.git#egg=gpmf
    dataset
    python-dotenv
    python-slugify
    Flask-BasicAuth
    pyjwt

[options.entry_points]
console_scripts =
    herotube = herotube.cli:_run

[options.extras_require]
test =
    pytest

[flake8]
max-line-length=100
